[package]
name = "gaast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.*"
num-bigint = "0.4.*"
array-init = "2.1.*"

[dev-dependencies]
rstest = "0.18.*"

[features]
default = ["eval"]
eval = []
