[package]
name = "gaast"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["math", "geometry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
array-init = "2.1.*"
num-integer = "0.1.45"
#memoize = "0.4.1"

[features]
default = ["eval"]
eval = []
